--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^16.2.0",
     "angular-star-rating": "^7.0.0",
     "bootstrap": "^5.3.2",
+    "datatables.net": "^1.13.7",
+    "datatables.net-bs4": "^1.13.7",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,12 +32,14 @@
     "@angular/cli": "^16.2.4",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "css-loader": "^6.8.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "style-loader": "^3.3.3",
     "typescript": "~5.1.3"
   }
 }
